# shipwright

./: .env.example  .gitignore  CLAUDE.md  CTO_SPEC.md  Dockerfile  LICENSE  README.md  REDESIGN.md  V2_SPEC.md  pyproject.toml
.github/workflows/: ci.yml
dev_agent/: __init__.py  config.py  coordinator.py  discord_bot.py  main.py  notifier.py  persistence.py  telegram_bot.py
dev_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev_agent/agents/: __init__.py  architect.py  base.py  fixer.py  implementer.py  qa.py  reviewer.py  team_lead.py  test_writer.py  tools.py
shipwright/: __init__.py  config.py  main.py  sdk_patch.py
shipwright/company/: __init__.py  company.py  employee.py  roles.py
shipwright/conversation/: router.py  session.py
shipwright/crew/: __init__.py  crew.py  lead.py  member.py  registry.py
shipwright/interfaces/: cli.py  discord.py  telegram.py
shipwright/persistence/: store.py
shipwright/utils/: logging.py
shipwright/workspace/: git.py  project.py
tests/: conftest.py  test_cli.py  test_company.py  test_config.py  test_conversation.py  test_coordinator.py  test_crew.py  test_employee.py  test_enterprise.py  test_harness_patterns.py  test_integration.py  test_main.py  test_persistence.py  test_plugin.py  test_roadmap.py  test_roles.py  test_router.py  test_session.py  test_tools.py  test_workspace.py
tests/integration/: test_pipeline.py
