[project]
name = "shipwright"
version = "2.0.0"
description = "Virtual engineering company powered by Claude — hire persistent AI employees, organize teams, and assign work conversationally"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "shipwright contributors"},
]
keywords = ["ai", "claude", "engineering", "automation", "agents", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
telegram = []  # Uses httpx (already in core deps)
discord = [
    "discord.py>=2.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4.0",
]
all = [
    "shipwright[yaml,discord,dev]",
]

[project.scripts]
shipwright = "shipwright.main:main"

[project.urls]
Homepage = "https://github.com/your-org/shipwright"
Repository = "https://github.com/your-org/shipwright"
Issues = "https://github.com/your-org/shipwright/issues"
Documentation = "https://github.com/your-org/shipwright#readme"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
